--- a/modules/ROOT/examples/deployment/container/orchestration/values-overwrite-tab-2.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/values-overwrite-tab-2.yaml
@@ -7,7 +7,9 @@ ingress:
     - hosts:
         - ocis.kube.owncloud.test
 insecure:
-  # disables ssl certificate checking for connections to the openID connect identity provider. Not recommended for production setups, but we don't have valid certificates in minikube
+  # disables ssl certificate checking for connections to the openID connect identity provider.
+  # Not recommended for production setups, but we don't have valid certificates in minikube
   oidcIdpInsecure: true
-  # disables ssl certificate checking for connections to the oCIS http apis. Not recommended for production setups, but we don't have valid certificates in minikube
+  # disables ssl certificate checking for connections to the oCIS http apis.
+  # Not recommended for production setups, but we don't have valid certificates in minikube
   ocisHttpApiInsecure: true
