--- a/antora.yml
+++ b/antora.yml
@@ -47,7 +47,8 @@ asciidoc:
     kube-versions-url: /charts/ocis/docs/kube-versions.adoc
     values-versions-url: /charts/ocis/docs/values.adoc.yaml
     values-desc-versions-url: /charts/ocis/docs/values-desc-table.adoc
-    composer-raw-url: https://github.com/owncloud/ocis/tree/
+    composer-url: https://github.com/owncloud/ocis/tree/
+    composer-raw-url: https://raw.githubusercontent.com/owncloud/ocis/
     composer-final-path: /deployments/examples
     # used in deployment/services via partials/env-and-yaml.adoc
     ocis-services-raw-url: 'https://raw.githubusercontent.com/owncloud/ocis/'
