--- a/modules/ROOT/examples/deployment/container/orchestration/generic-configs-tab-1.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/generic-configs-tab-1.yaml
@@ -9,3 +9,13 @@ data:
   # Only set to "1284d238-aa92-42ce-bdc4-0b0000009157" if you
   # migrate an existing oCIS installation from 2.0.0-rc.1 and earlier.
   storage-uuid: XXXXXXXXXXXXX
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: graph
+data:
+  # how to generate: create a UUIDv4
+  # example generation command: `cat /proc/sys/kernel/random/uuid`
+  application-id: XXXXXXXXXXXXX
