--- a/antora.yml
+++ b/antora.yml
@@ -15,7 +15,7 @@ asciidoc:
     # used via orchestration.adoc and in partials/env-and-yaml.adoc for all services
     # define to use tabs, the first tab is always active
     use_tab_2: true # set to any value if tab 2 should be shown
-    use_tab_3:      # set to any value if tab 3 should be shown
+    use_tab_3: true     # set to any value if tab 3 should be shown
     # service_tab_x will be used to assemble the url accessing the link for the services
     service_tab_1: docs # do not change, the docs branch contains changes of master
     service_tab_2: docs-stable-2.0
@@ -35,12 +35,12 @@ asciidoc:
     compose_tab_3_tab_text: 2.1.0
     # helm_tab_x will be used to assemble the url (tag) accessing the raw content for helm charts (tag)
     helm_tab_1: master
-    helm_tab_2: v0.1.0
-    helm_tab_3: tab_3
+    helm_tab_2: v0.2.0
+    helm_tab_3: v0.1.0
     # helm_tab_x_tab_text will be used as tab text shown for tab_x
     helm_tab_1_tab_text: latest
-    helm_tab_2_tab_text: 0.1.0
-    helm_tab_3_tab_text: 0.2.0
+    helm_tab_2_tab_text: 0.2.0
+    helm_tab_3_tab_text: 0.1.0
     # set attributes defining path components which will be assembled in the document
     secrets: deployment/container/orchestration/orchestration.adoc#define-secrets
     ocis-charts-raw-url: https://raw.githubusercontent.com/owncloud/ocis-charts/
