--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "private": true,
-  "name": "owncloud-ocis",
-  "description": "The ownCloud oCis documentation",
-  "version": "2.0.0",
+  "name": "owncloud-docs",
+  "description": "The ownCloud documentation",
+  "version": "3.0.0",
   "license": "AGPL-3.0",
-  "author": "The ownCloud Team <docs@owncloud.com>",
-  "homepage": "https://github.com/owncloud/docs-ocis#readme",
+  "author": "The ownCloud Team",
+  "homepage": "https://github.com/owncloud/docs#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/owncloud/docs-ocis.git"
+    "url": "git+https://github.com/owncloud/docs.git"
   },
   "bugs": {
-    "url": "https://github.com/owncloud/docs-ocis/issues"
+    "url": "https://github.com/owncloud/docs/issues"
   },
   "contributors": [
     {
-      "name": "Martin Mattel",
-      "email": "github@diemattels.at"
+      "name": "Martin Mattel"
     },
     {
       "name": "Edith Parzefall"
@@ -31,6 +30,8 @@
     "antora-local": "antora --stacktrace generate --cache-dir cache --redirect-facility static --generator ./generator/generate-site.js --clean --fetch --attribute format=html --url http://localhost:8080 site.yml",
     "antora-staging": "antora --stacktrace generate --cache-dir cache --redirect-facility static --generator ./generator/generate-site.js --clean --fetch --attribute format=html --url https://doc.staging.owncloud.com site.yml",
     "antora-bundle": "antora --stacktrace generate --cache-dir cache --redirect-facility static --generator ./generator/generate-site.js --clean --fetch --attribute format=html --ui-bundle-url ../docs-ui/build/ui-bundle.zip --url https://doc.staging.owncloud.com site.yml",
+    "antora-dev-local": "antora --stacktrace generate --cache-dir cache --redirect-facility static --generator ./generator/generate-site.js --clean --fetch --attribute format=html --url http://localhost:8080 site-dev.yml",
+    "antora-dev-bundle": "antora --stacktrace generate --cache-dir cache --redirect-facility static --generator ./generator/generate-site.js --clean --fetch --attribute format=html --ui-bundle-url ../docs-ui/build/ui-bundle.zip --url http://localhost:8080 site-dev.yml",
     "validate": "antora --stacktrace generate --cache-dir cache --redirect-facility disabled --generator ./generator/xref-validator.js --clean --fetch --attribute format=html site.yml",
     "linkcheck": "broken-link-checker --filter-level 3 --recursive --verbose"
   },
