--- a/antora.yml
+++ b/antora.yml
@@ -7,6 +7,9 @@ nav:
 
 asciidoc:
   attributes:
+    latest-ocis-version: {page-component-version}   # do not change, this is the value of the version key
+    previous-ocis-version: {page-component-version} # do not change, this is the value of the version key
+
     # used to define the include path for services without trailing /
     # note that any changes of this path also need adjustment in
     # https://github.com/owncloud/ocis-charts/tree/master/charts/ocis/docs
