--- a/site.yml
+++ b/site.yml
@@ -9,11 +9,6 @@ content:
   - url: .
     branches:
     - HEAD
-  # the docs-xxx are just present for the test build to satisfy used references
-  # the real build is made in the docs repo using correct values
-  - url: https://github.com/owncloud/docs-webui.git
-    branches:
-    - master
 
 ui:
   output_dir: assets
@@ -36,9 +31,6 @@ asciidoc:
     experimental: true
     # Antora pagination (prev page, next page)
     page-pagination: true
-    # Custom attribute page-component-build-list
-    # Only embed named opengraph images in docs-ui via partials/head-meta-opengraph.hbs
-    page-component-build-list: 'docs, server, ocis, webui, user, desktop, ios-app, android'
 #   common
     docs-base-url: 'https://doc.owncloud.com'
     oc-complete-base-url: 'https://download.owncloud.com/server/stable'
@@ -47,56 +39,18 @@ asciidoc:
     oc-marketplace-url: 'https://marketplace.owncloud.com'
     oc-central-url: 'https://central.owncloud.org'
     oc-support-url: 'https://owncloud.com/support'
-#   docs
-    latest-docs-version: 'next'
-    previous-docs-version: 'next'
-#   server
-    # note that the version attributes just need to be present and have next as key
-    # as they are just here for the test build
-    latest-server-version: '10.13'
-    previous-server-version: '10.12'
-    latest-server-download-version: 'next'
-    current-server-version: 'next'
-    oc-changelog-url: 'https://owncloud.com/changelog/server/'
-    oc-install-package-url: 'https://download.owncloud.com/server/stable/?sort=time&order=asc'
-    oc-examples-server-url: 'https://owncloud.install.com/owncloud'
-    oc-examples-server-ip: '127.0.0.1'
-    oc-examples-username: 'username'
-    oc-examples-password: 'password'
-    oc-complete-name: 'owncloud-complete-20220112'
-    occ-command-example-prefix: 'sudo -u www-data occ'
-    occ-command-example-prefix-no-sudo: 'occ'
-    php-net-url: 'https://www.php.net'
-    php-supported-versions-url: 'https://www.php.net/supported-versions.php'
-    http-status-codes-base-url: 'https://developer.mozilla.org/en-US/docs/Web/HTTP/Status'
-    std-port-http: '8080'
-    std-port-memcache: '11211'
-    std-port-mysql: '3306'
-    std-port-redis: '6379'
-#   webui
-    latest-webui-version: 'next'
-    previous-webui-version: 'next'
 #   ocis
-    latest-ocis-version: 'next'
-    previous-ocis-version: 'next'
+    latest-ocis-version: 'next@'   # do not change, soft set, correctly defined via antora.yml
+    previous-ocis-version: 'next@' # do not change, soft set, correctly defined via antora.yml
     ocis-actual-version: '4.0.4'
     ocis-former-version: '4.0.3'
     ocis-compiled: '2023-10-06 00:00:00 +0000 UTC'
     ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/stable/'
-#   desktop
-    latest-desktop-version: 'next'
-    previous-desktop-version: 'next'
-#   ios-app
-    latest-ios-version: 'next'
-    previous-ios-version: 'next'
-#   android
-    latest-android-version: 'next'
-    previous-android-version: 'next'
-#   branded
-    latest-branded-version: 'next'
-    previous-branded-version: 'next'
   extensions:
-    - ./lib/extensions/tabs.js
-    - ./lib/extensions/remote-include-processor.js
-    - ./node_modules/asciidoctor-kroki/src/asciidoctor-kroki.js
+    - ./ext-asciidoc/tabs.js
+    - ./ext-asciidoc/remote-include-processor.js
+    - asciidoctor-kroki
 
+antora:
+  extensions:
+    - ./ext-antora/generate-index.js
