--- a/antora.yml
+++ b/antora.yml
@@ -16,29 +16,24 @@ asciidoc:
     s-path: 'deployment/services/s-list'
 
     # service_tab_x will be used to assemble the url accessing the link for the services
-    # note that tab 2 should always contain the actual release and tab 3 the former, if use_service_tab_3 is enabled
     service_tab_1: 'docs' # do not change, the docs branch contains changes of master
-    service_tab_2: 'docs-stable-4.0' # latest stable
-    service_tab_3: 'docs-stable-3.0' # former stable
+#    service_tab_2: 'docs-stable-4.0' # latest stable
+#    service_tab_3: 'docs-stable-3.0' # former stable
 
     # service_tab_x_tab_text will be used as tab text shown for service_tab_x
-    # note that we are refering via the 'service_tab_x' branch to the ocis repo, not the master branch!
-    # note that tab 2 should always contain the actual release and tab 3 the former, if use_service_tab_3 is enabled
     service_tab_1_tab_text: 'latest'
-    service_tab_2_tab_text: '4.0.4' # latest stable including patch releases
-    service_tab_3_tab_text: '3.0.0' # former stable
+#    service_tab_2_tab_text: '4.0.4' # latest stable including patch releases
+#    service_tab_3_tab_text: '3.0.0' # former stable
 
     # compose_tab_x will be used to assemble the url (tag) accessing the link for the services (tag)
-    # note that tab 2 should always contain the actual release and tab 3 the former, if use_service_tab_3 is enabled
     compose_tab_1: 'master'
-    compose_tab_2: 'v4.0.0' # latest stable
-    compose_tab_3: 'v3.0.0' # former stable
+#    compose_tab_2: 'v4.0.0' # latest stable
+#    compose_tab_3: 'v3.0.0' # former stable
 
     # compose_tab_x_tab_text will be used as tab text shown for tab_x
-    # note that tab 2 should always contain the actual release and tab 3 the former, if use_service_tab_3 is enabled
     compose_tab_1_tab_text: 'latest'
-    compose_tab_2_tab_text: '4.0.4' # latest stable including patch releases
-    compose_tab_3_tab_text: '3.0.0' # former stable
+#    compose_tab_2_tab_text: '4.0.4' # latest stable including patch releases
+#    compose_tab_3_tab_text: '3.0.0' # former stable
 
     # helm_tab_x will be used to assemble the url (tag) accessing the raw content for helm charts (tag)
     # note that tab 2 always contains the actual release and tab 3 the former
