--- a/site.yml
+++ b/site.yml
@@ -42,6 +42,10 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next@'   # do not change, soft set, correctly defined via antora.yml
     previous-ocis-version: 'next@' # do not change, soft set, correctly defined via antora.yml
+    # these versions are just for printing like in releases but not used for referencing
+    # needs to be changed here and not in the docs-ocis repo to be properly shown on the web
+    # the following versions get printed on <all> build versions where applicapable
+    # for branch only dependent version content, change the values in antora.yml at compose_tab_1_tab_text
     ocis-actual-version: '4.0.4'
     ocis-former-version: '4.0.3'
     ocis-compiled: '2023-10-06 00:00:00 +0000 UTC'
