--- a/antora.yml
+++ b/antora.yml
@@ -16,16 +16,16 @@ asciidoc:
     s-path: 'deployment/services/s-list'
 
     # service_tab_x will be used to assemble the url accessing the link for the services
-    service_tab_1: 'docs-stable-5.0' # latest stable
+    service_tab_1: 'docs' # latest stable like docs-stable-5.0
 
     # service_tab_x_tab_text will be used as tab text shown for service_tab_x
-    service_tab_1_tab_text: '5.0.0' # latest stable including patch releases
+    service_tab_1_tab_text: 'master' # latest stable including patch releases like 5.0.0
 
     # compose_tab_x will be used to assemble the url (tag) accessing the link for the services (tag)
-    compose_tab_1: 'v5.0.0' # latest stable
+    compose_tab_1: 'master' # latest stable like v5.0.0
 
     # compose_tab_x_tab_text will be used as tab text shown for tab_x
-    compose_tab_1_tab_text: '5.0.0' # latest stable including patch releases
+    compose_tab_1_tab_text: 'master' # latest stable including patch releases like 5.0.0
 
     # helm_tab_x will be used to assemble the url (tag) accessing the raw content for helm charts (tag)
     # note that tab 2 always contains the actual release and tab 3 the former
