Fix for docker pull in upgrade to print the correct version

--- a/site.yml
+++ b/site.yml
@@ -42,12 +42,11 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next@'   # do not change, soft set, correctly defined via antora.yml
     previous-ocis-version: 'next@' # do not change, soft set, correctly defined via antora.yml
-    # these versions are just for printing like in releases but not used for referencing
-    # needs to be changed here and mandatory in the docs repo to be properly shown on the web
-    # the following versions get printed on <all> build versions where applicable
-    # for branch only dependent version content, change the values in antora.yml at compose_tab_1_tab_text
-    ocis-actual-version: '5.0.0'
-    ocis-former-version: '4.0.5'
+    # These versions are just for printing like in docs-main release info, but not used in docs-ocis.
+    # Versions in the ocis docs need to be defined in the branch specific docs-ocis/antora.yaml file.
+    # To do so, change the values in docs-ocis/antora.yml like compose_tab_1_tab_text.
+    ocis-actual-version: '5.0.1'
+    ocis-former-version: '4.0.7'
     ocis-compiled: '2024-02-15 00:00:00 +0000 UTC'
     ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/stable/'
   extensions:
