--- a/antora.yml
+++ b/antora.yml
@@ -17,7 +17,10 @@ asciidoc:
 
     # note that service_url_component is used for services ONLY
     # service_url_component will be used to assemble the url for services to include content (tables) sourced from the ocis repo.
-    service_url_component: 'docs' # docs for master or when stable, like docs-stable-5.0
+    service_url_component: 'docs' # docs for master or for stable, like docs-stable-5.0
+
+    # defines the url path component when accessing the ocis repo for versioned data includes 
+    ocis_repo_url_component: 'master' # master for master or for stable, like stable-5.0
 
     # service_tab_text will be used as tab text shown for the tables in services only
     # note when literally changing the word 'master' to something else, you also must adapt 'env-and-yaml.adoc'.
