--- a/site.yml
+++ b/site.yml
@@ -47,9 +47,9 @@ asciidoc:
     # To do so, change the values in the branch of docs-ocis/antora.yml like service_xxx and compose_xxx.
     ocis-actual-version: '5.0.7'
     ocis-former-version: '4.0.7'
-    # Needed in docs-ocis to define which rolling release to print the envvars table
-    ocis-rolling-version: '6.1.0'
-    ocis-compiled: '2024-05-14 00:00:00 +0000 UTC'
+    # Needed in docs-ocis to define which rolling release to print like in the envvars table or in deployment examples
+    ocis-rolling-version: '6.4.0'
+    ocis-compiled: '2024-09-12 00:00:00 +0000 UTC'
     ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/stable/'
   extensions:
     - ./ext-asciidoc/tabs.js
