--- a/modules/ROOT/examples/deployment/container/orchestration/s3ng-s3-access-key-id-secret-tab-3.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/s3ng-s3-access-key-id-secret-tab-3.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: notifications-smtp-secret # default of `secretRefs.s3CredentialsSecretRef`
+  name: s3-credentials-secret # default of `secretRefs.s3CredentialsSecretRef`
 type: Opaque
 data:
   # S3 access key.
