--- a/antora.yml
+++ b/antora.yml
@@ -18,6 +18,9 @@ asciidoc:
     # the name of the sub directory that defines the sources used in the compose deployment examples
     ocis_wopi: ocis_wopi
 
+    # this is statically in 5.0 only but computed in master and higher releases 
+    download-type: stable
+
     # note that service_url_component is used for services ONLY
     # service_url_component will be used to assemble the url for services to include content (tables) sourced from the ocis repo.
     service_url_component: 'docs-stable-5.0' # docs for master or when stable, like docs-stable-5.0
